--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -62,4 +62,4 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/my-profil, roles: [ROLE_USER, ROLE_ADMIN] }
