--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -63,3 +63,4 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/my-profil, roles: [ROLE_USER, ROLE_ADMIN] }
+        - { path: ^/register, roles: [ROLE_ADMIN] }
