--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -66,3 +66,5 @@ security:
         - { path: ^/my-profil, roles: [ROLE_USER, ROLE_ADMIN] }
         - { path: ^/creerSortie, roles: [ROLE_USER, ROLE_ADMIN] }
         - { path: ^/register, roles: [ROLE_ADMIN] }
+        - { path: ^/lieux, roles: [ROLE_ADMIN] }
+
